objects/Permission_Detail_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PermissionSet_Name__c</fullName>
        <label>PermissionSet Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Group_Config__c</fullName>
        <label>Permission Group Config</label>
        <referenceTo>Permission_Group_Config__mdt</referenceTo>
        <relationshipLabel>Permission Detail Configs</relationshipLabel>
        <relationshipName>Permission_Detail_Configs</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Permission_Set_API_Name__c</fullName>
        <label>Permission Set API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_API_Name__c</fullName>
        <label>Profile API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Permission Detail Config</label>
    <pluralLabel>Permission Detail Configs</pluralLabel>
</CustomObject>